# linsys

./: 1.ipynb  2.ipynb  3.ipynb  4.ipynb  main.py  pyproject.toml
data/1/: data_critical.mat  data_overdamped.mat  data_underdamped.mat  data_unstable.mat
data/2/: data_lqr_1.1.mat  data_lqr_1.10.mat  data_lqr_1.11.mat  data_lqr_1.2.mat  data_lqr_1.3.mat  data_lqr_1.4.mat  data_lqr_1.5.mat  data_lqr_1.6.mat  data_lqr_1.7.mat  data_lqr_1.8.mat  data_lqr_1.9.mat  data_lqr_2.1.mat  data_lqr_2.2.mat  data_lqr_2.3.mat  data_lqr_2.4.mat  data_lqr_2.6.mat  data_lqr_2.7.mat  data_lqr_2.8.mat  data_lqr_2.9.mat
data/2_lqr/: 1.mat  2.mat  3.mat  4.mat  5.mat
data/2_lqr_integral/: 6.mat  7.mat  8.mat
data/3_luenberger/: 10.mat  11.mat  12.mat  13.mat  14.mat  9.mat
data/4_kalman/: 15.mat  16.mat  17.mat  18.mat  19.mat
