[project]
name = "helikopter-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "polars>=1.35.1",
    "scipy>=1.16.3",
]

[tool.pyright]
venvPath = "."
venv = ".venv"
